# python-linear-algebra

./: .gitignore  README.md  main.py  setup.cfg  test.py
src/pylinalg/: __init__.py  linalg.py
src/pylinalg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_matrix.py
