[metadata]
name = pylinalg
version = 0.1.0
description = python library to preform common linear algebra operations
author = Levi Rogalla
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = pylinalg
python_requires = >=3.9
package_dir = =src
